# basic-python-template

./: .flake8  .pre-commit-config.yaml  CONTRIBUTING.md  README.md  pyproject.toml
.github/ISSUE_TEMPLATE/: bug.yml
.github/workflows/: codeql-analysis.yml  test.yml
tests/: __init__.py  test_basic_python_template.py
